crates/zenith/tests/snapshots/screens__session_validation_error__80x24__high-contrast.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·     ? keys














   · Connected to SOLAR 0.1.0 in 1.84 ms: protocol solar/1, manifest 2.0.0, 5
     APIs.
     This SOLAR has no solar.cancel. Type / for the commands, or ? for every
     key.
  error  There is no parameter mesage. Did you mean message?
┌──────────────────────────────────────────────────────────────────────────────┐
│ › /call solar.ping {"mesage": "hi"}                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 1.84 ms ─── in orbit 42s ───────────
--- every cell not listed is #F5F1E8 on #0B0C14
 0:  0-7   #FFC23D on #0B0C14 bold
 0: 10-18  #FFC23D on #0B0C14 bold underlined
 0: 73-73  #FFC23D on #0B0C14 bold
15:  3-3   #FFC23D on #0B0C14
19:  1-7   #FFC23D on #0B0C14 bold reversed
21:  1-3   #FFC23D on #0B0C14
21: 22-29  #FFC23D on #0B0C14 bold underlined
23:  3-3   #FFC23D on #0B0C14
23:  7-17  #FFC23D on #0B0C14 bold
