crates/zenith/tests/snapshots/screens__session_validation_error__80x24__light.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·     ? keys
                                         •             ∙
       ∙        ·                                       *
         **        •               •       *


      ▄▄██████▄▄
    ▄████████████▄
   ▄████              SOLAR
   ████████████████   The central API of the Constellation
   ████████████████   NIPS-CERN
              ████▀   0.1.0
    ▀████████████▀
      ▀▀██████▀▀

   · Connected to SOLAR 0.1.0 in 1.84 ms: protocol solar/1, manifest 2.0.0, 5
     APIs.
     This SOLAR has no solar.cancel. Type / for the commands, or ? for every
     key.
  error  There is no parameter mesage. Did you mean message?
┌──────────────────────────────────────────────────────────────────────────────┐
│ › /call solar.ping {"mesage": "hi"}                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 1.84 ms ─── in orbit 42s ───────────
--- every cell not listed is #17161C on #F5F1E8
 0:  0-7   #8C4907 on #F5F1E8 bold
 0: 10-18  #8C4907 on #F5F1E8 bold underlined
 0: 21-26  #555355 on #F5F1E8
 0: 29-33  #555355 on #F5F1E8
 0: 36-44  #555355 on #F5F1E8
 0: 45-72  #868482 on #F5F1E8
 0: 73-73  #8C4907 on #F5F1E8 bold
 0: 74-79  #555355 on #F5F1E8
 1: 41-41  #555355 on #F5F1E8
 1: 55-55  #868482 on #F5F1E8
 2:  7-7   #868482 on #F5F1E8
 2: 16-16  #868482 on #F5F1E8
 2: 56-56  #868482 on #F5F1E8
 3:  9-9   #555355 on #F5F1E8
 3: 10-10  #868482 on #F5F1E8
 3: 19-19  #868482 on #F5F1E8
 3: 35-35  #555355 on #F5F1E8
 3: 43-43  #868482 on #F5F1E8
 6:  3-18  #B35A00 on #F5F1E8
 7:  3-18  #B35A00 on #F5F1E8
 8:  3-18  #B35A00 on #F5F1E8
 8: 22-26  #8C4907 on #F5F1E8 bold
 9:  3-18  #B35A00 on #F5F1E8
10:  3-18  #B35A00 on #F5F1E8
10: 22-30  #555355 on #F5F1E8
11:  3-18  #B35A00 on #F5F1E8
11: 22-26  #555355 on #F5F1E8
12:  3-18  #B35A00 on #F5F1E8
13:  3-18  #B35A00 on #F5F1E8
15:  3-3   #8C4907 on #F5F1E8
19:  1-7   #8C4907 on #F5F1E8 bold reversed
20:  0-79  #868482 on #F5F1E8
21:  0-0   #868482 on #F5F1E8
21:  1-3   #8C4907 on #F5F1E8
21: 22-29  #8C4907 on #F5F1E8 bold underlined
21: 79-79  #868482 on #F5F1E8
22:  0-79  #868482 on #F5F1E8
23:  0-2   #868482 on #F5F1E8
23:  3-3   #8C4907 on #F5F1E8
23:  4-6   #868482 on #F5F1E8
23:  7-17  #8C4907 on #F5F1E8 bold
23: 18-20  #555355 on #F5F1E8
23: 28-32  #868482 on #F5F1E8
23: 33-42  #555355 on #F5F1E8
23: 50-54  #868482 on #F5F1E8
23: 55-63  #555355 on #F5F1E8
23: 67-79  #868482 on #F5F1E8
