crates/zenith/tests/snapshots/screens__session_validation_error__80x24__night.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·     ? keys





      ▄▄██████▄▄
    ▄████████████▄
   ▄████              SOLAR
   ████████████████   The central API of the Constellation
   ████████████████   NIPS-CERN
              ████▀   0.1.0
    ▀████████████▀
      ▀▀██████▀▀

   · Connected to SOLAR 0.1.0 in 1.84 ms: protocol solar/1, manifest 2.0.0, 5
     APIs.
     This SOLAR has no solar.cancel. Type / for the commands, or ? for every
     key.
  error  There is no parameter mesage. Did you mean message?
┌──────────────────────────────────────────────────────────────────────────────┐
│ › /call solar.ping {"mesage": "hi"}                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 1.84 ms ─── in orbit 42s ───────────
--- every cell not listed is #F5F1E8 on #0B0C14
 0:  0-7   #FFC23D on #0B0C14 bold
 0: 10-18  #FFC23D on #0B0C14 bold underlined
 0: 21-26  #9C9A97 on #0B0C14
 0: 29-33  #9C9A97 on #0B0C14
 0: 36-44  #9C9A97 on #0B0C14
 0: 45-72  #646365 on #0B0C14
 0: 73-73  #FFC23D on #0B0C14 bold
 0: 74-79  #9C9A97 on #0B0C14
 6:  3-18  #FFC23D on #0B0C14
 7:  3-18  #FFC23D on #0B0C14
 8:  3-18  #FFC23D on #0B0C14
 8: 22-26  #FFC23D on #0B0C14 bold
 9:  3-18  #FFC23D on #0B0C14
10:  3-18  #FFC23D on #0B0C14
10: 22-30  #9C9A97 on #0B0C14
11:  3-18  #FFC23D on #0B0C14
11: 22-26  #9C9A97 on #0B0C14
12:  3-18  #FFC23D on #0B0C14
13:  3-18  #FFC23D on #0B0C14
15:  3-3   #FFC23D on #0B0C14
19:  1-7   #D98E1F on #0B0C14 bold reversed
20:  0-79  #646365 on #0B0C14
21:  0-0   #646365 on #0B0C14
21:  1-3   #FFC23D on #0B0C14
21: 22-29  #D98E1F on #0B0C14 bold underlined
21: 79-79  #646365 on #0B0C14
22:  0-79  #646365 on #0B0C14
23:  0-2   #646365 on #0B0C14
23:  3-3   #FFC23D on #0B0C14
23:  4-6   #646365 on #0B0C14
23:  7-17  #FFC23D on #0B0C14 bold
23: 18-20  #9C9A97 on #0B0C14
23: 28-32  #646365 on #0B0C14
23: 33-42  #9C9A97 on #0B0C14
23: 50-54  #646365 on #0B0C14
23: 55-63  #9C9A97 on #0B0C14
23: 67-79  #646365 on #0B0C14
