crates/zenith/tests/snapshots/screens__session_validation_error__80x24__no_colour_ascii.snap
---
source: crates/zenith/tests/screens.rs
expression: screen(&buffer)
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                .     .     ? keys





      ..######..
    .############.
   .####              SOLAR
   ################   The central API of the Constellation
   ################   NIPS-CERN
              ####'   0.1.0
    '############'
      ''######''

   - Connected to SOLAR 0.1.0 in 1.84 ms: protocol solar/1, manifest 2.0.0, 5
     APIs.
     This SOLAR has no solar.cancel. Type / for the commands, or ? for every
     key.
  error  There is no parameter mesage. Did you mean message?
+------------------------------------------------------------------------------+
| > /call solar.ping {"mesage": "hi"}                                          |
+------------------------------------------------------------------------------+
 --*-- SOLAR 0.1.0 - solar/1 --- last call 1.84 ms --- in orbit 42s -----------
--- every cell not listed is - on -
 0:  0-7   - on - bold
 0: 10-18  - on - bold underlined
 0: 45-72  - on - dim
 0: 73-73  - on - bold
 8: 22-26  - on - bold
15:  3-3   - on - bold
19:  1-7   - on - bold reversed
20:  0-79  - on - dim
21:  0-0   - on - dim
21:  1-3   - on - bold
21: 22-29  - on - bold underlined
21: 79-79  - on - dim
22:  0-79  - on - dim
23:  0-2   - on - dim
23:  3-3   - on - bold
23:  4-6   - on - dim
23:  7-17  - on - bold
23: 28-32  - on - dim
23: 50-54  - on - dim
23: 67-79  - on - dim
